Adds a test for magiclink
Issue #HAV-320

Signed-off-by: Christopher Mundus <chris@kindlyops.com>

--- a/docker-compose.admin.yml
+++ b/docker-compose.admin.yml
@@ -146,7 +146,10 @@ services:
     build:
       context: webui
       dockerfile: Dockerfile-cypress
+    links:
+      - mailhog
     depends_on:
+      - mailhog
       - gatekeeper
     volumes:
       - ./webui:/e2e
