Optimize docker builds, don't send the entire tree as context
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.admin.yml
+++ b/docker-compose.admin.yml
@@ -56,7 +56,7 @@ services:
       - ./mailhog/maildir:/maildir
   apitest:
     build:
-      context: .
+      context: ./apitest
       dockerfile: ./apitest/Dockerfile
     working_dir: /usr/src/app
     environment:
