Fix havenapi builds
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -142,7 +142,7 @@ services:
       - FAKTORY_URL=tcp://:fassword@faktory:7419
     build:
       context: ./havenapi
-      dockerfile: ./havenapi/Dockerfile-hotreload
+      dockerfile: Dockerfile-hotreload
     links:
       - db
       - faktory
