Resource limits and config sync for k8s
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/k8s/havenapi-deployment.yaml
+++ b/k8s/havenapi-deployment.yaml
@@ -64,6 +64,11 @@ spec:
                 secretKeyRef:
                   name: sentry
                   key: dsn
+            - name: SLACK_WEBHOOK
+              valueFrom:
+                secretKeyRef:
+                  name: slack
+                  key: webhook
           volumeMounts:
             - name: secret-volume
               mountPath: /etc/haven-credentials/
