upgrade to keycloak 7.0
Signed-off-by: Elliot Murphy <statik@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - DB_ADDR=postgres
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=admin
-      - KEYCLOAK_LOGLEVEL=info
+      - KEYCLOAK_LOGLEVEL=INFO
       - PROXY_ADDRESS_FORWARDING=true
       - KEYCLOAK_HOSTNAME=dev.havengrc.com
       - KEYCLOAK_HTTP_PORT=80
